--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,26 +1,28 @@
+@import 'reset';
+
 html {
     scroll-behavior: smooth;
-}
-* {
+  }
+  * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
-}
-.header {
+  }
+  .header {
     position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
     width: 100%;
-}
-.header__container {
+  }
+  .header__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
-}
-.header__container::after {
+  }
+  .header__container::after {
     content: "";
     position: absolute;
     border-top: 1px solid #BABBC5;
@@ -29,25 +31,25 @@ html {
     transform: translateX(-50%);
     max-width: 1170px;
     width: calc(100% - 30px);
-}
-.header__logo {
+  }
+  .header__logo {
     display: flex;
-}
-.header__nav {
+  }
+  .header__nav {
     max-width: 670px;
     width: 100%;
-}
-.header__toggle-menu {
+  }
+  .header__toggle-menu {
     display: none;
-}
-.header__list {
+  }
+  .header__list {
     display: flex;
-}
-.header__list-item {
+  }
+  .header__list-item {
     list-style: none;
     flex: 1 1 auto;
-}
-.header__link {
+  }
+  .header__link {
     text-decoration: none;
     color: #FFF;
     text-align: center;
@@ -60,28 +62,28 @@ html {
     border-bottom: 3px solid #00000000;
     position: relative;
     z-index: 2;
-}
-.header__link:hover {
+  }
+  .header__link:hover {
     border-bottom: 3px solid #BABBC5;
-}
-.header__link:active {
+  }
+  .header__link:active {
     color: #E71414;
     border-bottom: 3px solid #E71414;
-}
-.main-container {
+  }
+  .main-container {
     max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
-}
-.banner {
-    background: url(../assets/images/banner.jpg);
+  }
+  .banner {
+    background: url(/src/assets/images/banner.jpg);
     background-size: cover;
     background-position: center;
     margin: 0 auto;
     position: relative;
     padding: 230px 0 120px;
-}
-.banner::before {
+  }
+  .banner::before {
     content: "";
     position: absolute;
     top: 0;
@@ -90,34 +92,34 @@ html {
     height: 100%;
     opacity: 0.8;
     background-color: #252B49;
-}
-.banner__container {
+  }
+  .banner__container {
     display: flex;
     justify-content: center;
     position: relative;
     align-items: center;
-}
-.banner__info {
+  }
+  .banner__info {
     max-width: 100%;
     text-align: center;
-}
-.banner__title {
+  }
+  .banner__title {
     color: #FFFFFF;
     font-size: 64px;
     font-weight: 900;
     line-height: 75px;
     text-transform: uppercase;
     margin-bottom: 31.43px;
-}
-.banner__description {
+  }
+  .banner__description {
     color: #FFFFFF;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 28px;
     margin-bottom: 79.57px;
-}
-.button {
+  }
+  .button {
     color: #FFFFFF;
     font-size: 24px;
     font-weight: 900;
@@ -128,16 +130,16 @@ html {
     max-width: 370px;
     width: 100%;
     padding: 25px;
-}
-.button:active {
+  }
+  .button:active {
     background-color: #FF4343;
     box-shadow: 4px 4px 30px 0px #FF4343;
-}
-.button:hover {
+  }
+  .button:hover {
     background-color: #E71414;
     border: 1px solid #E71414;
-}
-@media only screen and (max-width: 1024px) {
+  }
+  @media only screen and (max-width: 1024px) {
     .main-container {
         padding: 0 20px;
     }
@@ -164,8 +166,8 @@ html {
         max-width: 314px;
         padding: 25px;
     }
-}
-@media only screen and (max-width: 767px) {
+  }
+  @media only screen and (max-width: 767px) {
     .header__container {
         column-gap: calc(100% - 127px);
     }
@@ -201,4 +203,4 @@ html {
         max-width: 280px;
         padding: 15px;
     }
-}
+  }
