--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,28 +1,35 @@
 @import 'reset';
 
+@mixin font($color, $fontSize, $fontWeight, $lineHeight) {
+  color: $color;
+  font-family: 'Raleway', sans-serif;
+  font-size: $fontSize;
+  font-weight: $fontWeight;
+  line-height: $lineHeight;
+}
+
 html {
-    scroll-behavior: smooth;
-  }
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
-  }
-  .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-  }
-  .header__container {
+  scroll-behavior: smooth;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+
+  &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    @media only screen and (max-width: 767px) {
+      column-gap: calc(100% - 127px);
+    }
   }
-  .header__container::after {
+
+  &__container::after {
     content: "";
     position: absolute;
     border-top: 1px solid #BABBC5;
@@ -31,31 +38,58 @@ html {
     transform: translateX(-50%);
     max-width: 1170px;
     width: calc(100% - 30px);
+    @media only screen and (max-width: 1024px) {
+      width: calc(100% - 40px);
+    }
+    @media only screen and (max-width: 767px) {
+      display: none;
+    }
   }
-  .header__logo {
+
+  &__logo {
     display: flex;
   }
-  .header__nav {
+
+  &__logo svg {
+    @media only screen and (max-width: 767px) {
+      width: 103.472px;
+      height: 14.352px;
+      margin-right: -13px;
+    }
+  }
+
+  &__nav {
     max-width: 670px;
     width: 100%;
+    @media only screen and (max-width: 1024px) {
+     max-width: 566px;
+    }
   }
-  .header__toggle-menu {
+
+  &__toggle-menu {
     display: none;
+    @media only screen and (max-width: 767px) {
+      display: flex;
+      align-items: center
+    }
   }
-  .header__list {
+
+  &__list {
     display: flex;
+    @media only screen and (max-width: 767px) {
+      display: none;
+    }
   }
-  .header__list-item {
+
+  &__list-item {
     list-style: none;
     flex: 1 1 auto;
   }
-  .header__link {
+
+  &__link {
+    @include font(#FFF, 13px, 700, 15px);
     text-decoration: none;
-    color: #FFF;
     text-align: center;
-    font-size: 13px;
-    font-weight: 700;
-    line-height: 15px;
     text-transform: uppercase;
     display: block;
     padding: 41px 0;
@@ -63,27 +97,39 @@ html {
     position: relative;
     z-index: 2;
   }
-  .header__link:hover {
+
+  &__link:hover {
     border-bottom: 3px solid #BABBC5;
   }
-  .header__link:active {
+
+  &__link:active {
     color: #E71414;
     border-bottom: 3px solid #E71414;
   }
-  .main-container {
-    max-width: 1200px;
-    padding: 0 15px;
-    margin: 0 auto;
+}
+.main-container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  @media only screen and (max-width: 1024px) {
+    padding: 0 20px;
   }
-  .banner {
-    background: url(/src/assets/images/banner.jpg);
-    background-size: cover;
-    background-position: center;
-    margin: 0 auto;
-    position: relative;
-    padding: 230px 0 120px;
+}
+.banner {
+  background: url(/src/assets/images/banner.jpg);
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
+  position: relative;
+  padding: 230px 0 120px;
+  @media only screen and (max-width: 1024px) {
+    padding: 257px 0 126px;
   }
-  .banner::before {
+  @media only screen and (max-width: 767px) {
+    padding: 106px 0 52px;
+  }
+
+  &::before {
     content: "";
     position: absolute;
     top: 0;
@@ -93,114 +139,75 @@ html {
     opacity: 0.8;
     background-color: #252B49;
   }
-  .banner__container {
+  
+  &__container {
     display: flex;
     justify-content: center;
     position: relative;
     align-items: center;
   }
-  .banner__info {
+  
+  &__info {
     max-width: 100%;
     text-align: center;
   }
-  .banner__title {
-    color: #FFFFFF;
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 75px;
+  
+  &__title {
+    @include font(#FFF, 64px, 900, 75px);
     text-transform: uppercase;
     margin-bottom: 31.43px;
+    @media only screen and (max-width: 1024px) {
+      font-size: 48px;
+      line-height: 56px;
+      margin-bottom: 61.86px;
+    }
+    @media only screen and (max-width: 767px) {
+      font-size: 36px;
+      line-height: 42px;
+      margin-bottom: 32.71px;
+    }
   }
-  .banner__description {
-    color: #FFFFFF;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+  
+  &__description {
+    @include font(#FFF, 24px, 400, 28px);
     margin-bottom: 79.57px;
+    @media only screen and (max-width: 1024px) {
+      font-size: 18px;
+      line-height: 21px;
+      margin-bottom: 89.14px;
+    }
+    @media only screen and (max-width: 767px) {
+      font-size: 14px;
+      line-height: 16.44px;
+      margin-bottom: 49.29px;
+    }
   }
-  .button {
-    color: #FFFFFF;
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 28px;
-    text-transform: uppercase;
-    background-color: #FF4343;
-    border: 1px solid #FF4343;
-    max-width: 370px;
-    width: 100%;
+}
+  
+.button {
+  @include font(#FFF, 24px, 900, 28px);
+  text-transform: uppercase;
+  background-color: #FF4343;
+  border: 1px solid #FF4343;
+  max-width: 370px;
+  width: 100%;
+  padding: 25px;
+  @media only screen and (max-width: 1024px) {
+    max-width: 314px;
     padding: 25px;
   }
-  .button:active {
+  @media only screen and (max-width: 767px) {
+    max-width: 280px;
+    padding: 15px;
+  }
+
+  &:active {
     background-color: #FF4343;
     box-shadow: 4px 4px 30px 0px #FF4343;
   }
-  .button:hover {
+
+  &:hover {
     background-color: #E71414;
     border: 1px solid #E71414;
   }
-  @media only screen and (max-width: 1024px) {
-    .main-container {
-        padding: 0 20px;
-    }
-    .header__nav {
-        max-width: 566px;
-    }
-    .header__container::after {
-        width: calc(100% - 40px);
-    }
-    .banner {
-        padding: 257px 0 126px;
-    }
-    .banner__title {
-        font-size: 48px;
-        line-height: 56px;
-        margin-bottom: 61.86px;
-    }
-    .banner__description {
-        font-size: 18px;
-        line-height: 21px;
-        margin-bottom: 89.14px;
-    }
-    .button {
-        max-width: 314px;
-        padding: 25px;
-    }
-  }
-  @media only screen and (max-width: 767px) {
-    .header__container {
-        column-gap: calc(100% - 127px);
-    }
-    .header__logo svg {
-        width: 103.472px;
-        height: 14.352px;
-        margin-right: -13px;
-    }
-    .header__container::after {
-        display: none;
-    }
-    .header__list {
-        display: none;
-    }
-    .header__toggle-menu {
-        display: flex;
-        align-items: center
-    }
-    .banner {
-        padding: 106px 0 52px;
-    }
-    .banner__title {
-        font-size: 36px;
-        line-height: 42px;
-        margin-bottom: 32.71px;
-    }
-    .banner__description {
-        font-size: 14px;
-        line-height: 16.44px;
-        margin-bottom: 49.29px;
-    }
-    .button {
-        max-width: 280px;
-        padding: 15px;
-    }
-  }
+}
