--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -2,7 +2,6 @@
 
 @mixin font($color, $fontSize, $fontWeight, $lineHeight) {
   color: $color;
-  font-family: 'Raleway', sans-serif;
   font-size: $fontSize;
   font-weight: $fontWeight;
   line-height: $lineHeight;
@@ -10,6 +9,10 @@
 
 html {
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
 }
 
 .header {
