--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -51,13 +51,13 @@ body {
 
   &__logo {
     display: flex;
-  }
-
-  &__logo svg {
-    @media only screen and (max-width: 767px) {
-      width: 103.472px;
-      height: 14.352px;
-      margin-right: -13px;
+    
+    & svg {
+      @media only screen and (max-width: 767px) {
+        width: 103.472px;
+        height: 14.352px;
+        margin-right: -13px;
+      }
     }
   }
 
