--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -51,12 +51,14 @@ body {
 
   &__logo {
     display: flex;
-  }
 
-  &__logo svg {
-    @media only screen and (max-width: 767px) {
-      width: 103.472px;
-      height: 14.352px;
+    & svg {
+      width: 184px;
+      height: 27px;
+      @media only screen and (max-width: 767px) {
+        width: 103.472px;
+        height: 14.352px;
+      }
     }
   }
 
@@ -66,7 +68,7 @@ body {
     @media only screen and (max-width: 1024px) {
      max-width: 566px;
     }
-    @media only screen and (max-width: 1024px) {
+    @media only screen and (max-width: 767px) {
       display: none;
     }
   }
