--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,11 +1,6 @@
 @import 'reset';
-
-@mixin font($color, $fontSize, $fontWeight, $lineHeight) {
-  color: $color;
-  font-size: $fontSize;
-  font-weight: $fontWeight;
-  line-height: $lineHeight;
-}
+@import 'mixin';
+@import 'var';
 
 html {
   scroll-behavior: smooth;
@@ -15,27 +10,38 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+.main-container {
+  max-width: 1200px;
+  padding: 0 15px;
+  margin: 0 auto;
+  @media only screen and (max-width: 1024px) {
+    padding: 0 20px;
+  }
+}
+
 .header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
+  @media only screen and (max-width: 767px) {
+    padding: 19px 0;
+  }
 
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
     @media only screen and (max-width: 767px) {
-      column-gap: calc(100% - 127px);
+      padding-right: 35px;
     }
   }
 
   &__container::after {
     content: "";
     position: absolute;
-    border-top: 1px solid #BABBC5;
+    border-top: 1px solid $grey;
     bottom: 0px;
     left: 50%;
     transform: translateX(-50%);
@@ -56,18 +62,14 @@ body {
       width: 184px;
       height: 27px;
       @media only screen and (max-width: 767px) {
-        width: 103.472px;
-        height: 14.352px;
+        height: 100%;
+        width: 100%;
+        max-width: 103.472px;
       }
     }
   }
 
   &__nav {
-    max-width: 670px;
-    width: 100%;
-    @media only screen and (max-width: 1024px) {
-     max-width: 566px;
-    }
     @media only screen and (max-width: 767px) {
       display: none;
     }
@@ -94,37 +96,35 @@ body {
   }
 
   &__link {
-    @include font(#FFF, 13px, 700, 15px);
+    @include font($white, 13px, 700, 15px);
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
     display: block;
     padding: 41px 0;
-    border-bottom: 3px solid #00000000;
+    border-bottom: 3px solid $transparent;
     position: relative;
     z-index: 2;
-  }
+    min-width: 134px;
 
-  &__link:hover {
-    border-bottom: 3px solid #BABBC5;
-  }
+    &:hover {
+      border-bottom: 3px solid $grey;
+    }
+  
+    &:active {
+      color: $red;
+      border-bottom: 3px solid $red;
+    }
 
-  &__link:active {
-    color: #E71414;
-    border-bottom: 3px solid #E71414;
+    @media only screen and (max-width: 1024px) {
+      min-width: 112px;
+    }
+    @media only screen and (max-width: 850px) {
+      min-width: 100px;
+    }
   }
 }
-.main-container {
-  max-width: 1200px;
-  padding: 0 15px;
-  margin: 0 auto;
-  @media only screen and (max-width: 1024px) {
-    padding: 0 20px;
-  }
-  @media only screen and (max-width: 767px) {
-    padding-right: 35px;
-  }
-}
+
 .banner {
   background: url(/src/assets/media/banner.jpg);
   background-size: cover;
@@ -147,23 +147,16 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0.8;
-    background-color: #252B49;
+    background-color: $dimBlue;
   }
   
   &__container {
-    display: flex;
-    justify-content: center;
     position: relative;
-    align-items: center;
-  }
-  
-  &__info {
-    max-width: 100%;
     text-align: center;
   }
   
   &__title {
-    @include font(#FFF, 64px, 900, 75px);
+    @include font($white, 64px, 900, 75px);
     text-transform: uppercase;
     margin-bottom: 31.43px;
     @media only screen and (max-width: 1024px) {
@@ -179,7 +172,7 @@ body {
   }
   
   &__description {
-    @include font(#FFF, 24px, 400, 28px);
+    @include font($white, 24px, 400, 28px);
     margin-bottom: 79.57px;
     @media only screen and (max-width: 1024px) {
       font-size: 18px;
@@ -195,29 +188,30 @@ body {
 }
   
 .button {
-  @include font(#FFF, 24px, 900, 28px);
+  @include font($white, 24px, 900, 28px);
   text-transform: uppercase;
-  background-color: #FF4343;
-  border: 1px solid #FF4343;
+  background-color: $lightRed;
+  border: 1px solid $lightRed;
   max-width: 370px;
   width: 100%;
   padding: 25px;
+  cursor: pointer;
   @media only screen and (max-width: 1024px) {
     max-width: 314px;
     padding: 25px;
   }
   @media only screen and (max-width: 767px) {
-    max-width: 280px;
+    max-width: 100%;
     padding: 15px;
   }
 
   &:active {
-    background-color: #FF4343;
-    box-shadow: 4px 4px 30px 0px #FF4343;
+    background-color: $lightRed;
+    box-shadow: 4px 4px 30px 0px $lightRed;
   }
 
   &:hover {
-    background-color: #E71414;
-    border: 1px solid #E71414;
+    background-color: $red;
+    border: 1px solid $red;
   }
 }
