fix var's naming

--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -1,7 +1,7 @@
 // Colors
-$grey: #BABBC5;
-$white: #ffffff;
-$transparent: #00000000;
-$red: #E71414;
-$lightRed: #FF4343;
-$dimBlue: #252B49;
+$line-color: #BABBC5;
+$main-font-color: #ffffff;
+$hidden-line-color: #00000000;
+$accent-color: #E71414;
+$btn-color: #FF4343;
+$background-color: #252B49;
