--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -36,22 +36,22 @@ body {
     @media only screen and (max-width: 767px) {
       padding-right: 35px;
     }
-  }
 
-  &__container::after {
-    content: "";
-    position: absolute;
-    border-top: 1px solid $grey;
-    bottom: 0px;
-    left: 50%;
-    transform: translateX(-50%);
-    max-width: 1170px;
-    width: calc(100% - 30px);
-    @media only screen and (max-width: 1024px) {
-      width: calc(100% - 40px);
-    }
-    @media only screen and (max-width: 767px) {
-      display: none;
+    &::after {
+      content: "";
+      position: absolute;
+      border-top: 1px solid $line-color;
+      bottom: 0px;
+      left: 50%;
+      transform: translateX(-50%);
+      max-width: 1170px;
+      width: calc(100% - 30px);
+      @media only screen and (max-width: 1024px) {
+        width: calc(100% - 40px);
+      }
+      @media only screen and (max-width: 767px) {
+        display: none;
+      }
     }
   }
 
@@ -96,24 +96,24 @@ body {
   }
 
   &__link {
-    @include font($white, 13px, 700, 15px);
+    @include font($main-font-color, 13px, 700, 15px);
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
     display: block;
     padding: 41px 0;
-    border-bottom: 3px solid $transparent;
+    border-bottom: 3px solid $hidden-line-color;
     position: relative;
     z-index: 2;
     min-width: 134px;
 
     &:hover {
-      border-bottom: 3px solid $grey;
+      border-bottom: 3px solid $line-color;
     }
   
     &:active {
-      color: $red;
-      border-bottom: 3px solid $red;
+      color: $accent-color;
+      border-bottom: 3px solid $accent-color;
     }
 
     @media only screen and (max-width: 1024px) {
@@ -147,7 +147,7 @@ body {
     width: 100%;
     height: 100%;
     opacity: 0.8;
-    background-color: $dimBlue;
+    background-color: $background-color;
   }
   
   &__container {
@@ -156,7 +156,7 @@ body {
   }
   
   &__title {
-    @include font($white, 64px, 900, 75px);
+    @include font($main-font-color, 64px, 900, 75px);
     text-transform: uppercase;
     margin-bottom: 31.43px;
     @media only screen and (max-width: 1024px) {
@@ -172,7 +172,7 @@ body {
   }
   
   &__description {
-    @include font($white, 24px, 400, 28px);
+    @include font($main-font-color, 24px, 400, 28px);
     margin-bottom: 79.57px;
     @media only screen and (max-width: 1024px) {
       font-size: 18px;
@@ -188,10 +188,10 @@ body {
 }
   
 .button {
-  @include font($white, 24px, 900, 28px);
+  @include font($main-font-color, 24px, 900, 28px);
   text-transform: uppercase;
-  background-color: $lightRed;
-  border: 1px solid $lightRed;
+  background-color: $btn-color;
+  border: 1px solid $btn-color;
   max-width: 370px;
   width: 100%;
   padding: 25px;
@@ -206,12 +206,12 @@ body {
   }
 
   &:active {
-    background-color: $lightRed;
-    box-shadow: 4px 4px 30px 0px $lightRed;
+    background-color: $btn-color;
+    box-shadow: 4px 4px 30px 0px $btn-color;
   }
 
   &:hover {
-    background-color: $red;
-    border: 1px solid $red;
+    background-color: $accent-color;
+    border: 1px solid $accent-color;
   }
 }
