--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -1,7 +1,7 @@
 // Colors
 $line-color: #BABBC5;
 $main-font-color: #ffffff;
-$hidden-line-color: #00000000;
+$hidden-line-color: transparent;
 $accent-color: #E71414;
 $btn-color: #FF4343;
 $background-color: #252B49;
