--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -5,3 +5,5 @@ $hidden-line-color: transparent;
 $accent-color: #E71414;
 $btn-color: #FF4343;
 $background-color: #252B49;
+$feature-title-color: #2D3033;
+$feature-description-color:#6C7279
