--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -6,4 +6,6 @@ $accent-color: #E71414;
 $btn-color: #FF4343;
 $background-color: #252B49;
 $feature-title-color: #2D3033;
-$feature-description-color:#6C7279
+$feature-description-color:#6C7279;
+$gradient-hover: linear-gradient(0deg, rgba(255, 67, 67, 0.8), rgba(255, 67, 67, 0.8));
+$gradient-active: linear-gradient(0deg, rgba(185, 12, 12, 0.8), rgba(185, 12, 12, 0.8));
