--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -376,3 +376,148 @@ body {
     }
   }
 }
+
+.footer {
+  text-align: center;
+
+  &__wrapper-info {
+    background-color: #353C65;
+  }
+
+  &__info {
+    padding: 71px 15px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    @media only screen and (max-width: 1024px) {
+      padding: 46.59px 20px 41.19px;
+      column-gap: 20px;
+    }
+    @media only screen and (max-width: 767px) {
+      display: block;
+      padding: 34.14px 20px;
+    }
+  }
+
+  &__location {
+    @media only screen and (max-width: 767px) {
+      margin-bottom: 69.24px;
+    }
+
+    &-title {
+      @include font($main-font-color, 18px, 700, 21px);
+      margin-bottom: 29px;
+      text-transform: uppercase;
+      @media only screen and (max-width: 1024px) {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 17.72px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 34px;
+      }
+    }
+  
+    &-description {
+      @include font($main-font-color, 18px, 400, 21px);
+      @media only screen and (max-width: 1024px) {
+        font-size: 14px;
+        line-height: 16px;
+      }
+    }
+  }
+
+  &__social {
+    @media only screen and (max-width: 767px) {
+      margin-bottom: 59.05px;
+    }
+    &-title {
+      @include font($main-font-color, 18px, 700, 21px);
+      margin-bottom: 48.86px;
+      text-transform: uppercase;
+      @media only screen and (max-width: 1024px) {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 32.51px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 36.71px;
+      }
+    }
+
+    &-container {
+      display: flex;
+      justify-content: center;
+      column-gap: 27px;
+      @media only screen and (max-width: 1024px) {
+        column-gap: 23px;
+      }
+      @media only screen and (max-width: 767px) {
+        column-gap: 16.77px;
+      }
+    }
+  
+    &-wrapper-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 39px;
+      height: 39px;
+      @media only screen and (max-width: 1024px) {
+        width: 33px;
+        height: 33px;
+      }
+    
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  &__about {
+    &-title {
+      @include font($main-font-color, 18px, 700, 21px);
+      margin-bottom: 29px;
+      text-transform: uppercase;
+      @media only screen and (max-width: 1024px) {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 15.58px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 38.71px;
+      }
+    }
+  
+    &-description {
+      @include font($main-font-color, 18px, 400, 21px);
+      @media only screen and (max-width: 1024px) {
+        font-size: 14px;
+        line-height: 16px;
+      }
+    }
+  }
+
+  &__wrapper-copy {
+    background-color: #2C3154;
+  }
+
+  &__copy {
+    padding: 24px 15px;
+    @include font($footer-secondary-color, 18px, 400, 21px);
+    max-width: 400px;
+    @media only screen and (max-width: 1024px) {
+      font-size: 14px;
+      line-height: 16px;
+      padding: 14.28px 20px 14.43px;
+    }
+    @media only screen and (max-width: 767px) {
+      padding: 29.86px 20px 28.14px;
+    }
+
+    &-highlight {
+      color: $main-font-color;
+    }
+  }
+}
