--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -10,3 +10,4 @@ $feature-description-color:#6C7279;
 $gradient-hover: linear-gradient(0deg, rgba(255, 67, 67, 0.8), rgba(255, 67, 67, 0.8));
 $gradient-active: linear-gradient(0deg, rgba(185, 12, 12, 0.8), rgba(185, 12, 12, 0.8));
 $footer-secondary-color: #808080;
+$download-color: #000000;
