add section team

--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -2,11 +2,11 @@
 $line-color: #BABBC5;
 $main-font-color: #ffffff;
 $hidden-line-color: transparent;
-$accent-color: #E71414;
-$btn-color: #FF4343;
+$active-color: #E71414;
+$accent-color: #FF4343;
 $background-color: #252B49;
-$feature-title-color: #2D3033;
-$feature-description-color:#6C7279;
+$title-color: #2D3033;
+$description-color:#6C7279;
 $gradient-hover: linear-gradient(0deg, rgba(255, 67, 67, 0.8), rgba(255, 67, 67, 0.8));
 $gradient-active: linear-gradient(0deg, rgba(185, 12, 12, 0.8), rgba(185, 12, 12, 0.8));
 $footer-secondary-color: #808080;
