--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -112,8 +112,8 @@ body {
     }
   
     &:active {
-      color: $accent-color;
-      border-bottom: 3px solid $accent-color;
+      color: $active-color;
+      border-bottom: 3px solid $active-color;
     }
 
     @media only screen and (max-width: 1024px) {
@@ -192,8 +192,8 @@ body {
 .button {
   @include font($main-font-color, 24px, 900, 28px);
   text-transform: uppercase;
-  background-color: $btn-color;
-  border: 1px solid $btn-color;
+  background-color: $accent-color;
+  border: 1px solid $accent-color;
   max-width: 370px;
   width: 100%;
   padding: 25px;
@@ -208,13 +208,13 @@ body {
   }
 
   &:active {
-    background-color: $btn-color;
-    box-shadow: 4px 4px 30px 0px $btn-color;
+    background-color: $accent-color;
+    box-shadow: 4px 4px 30px 0px $accent-color;
   }
 
   &:hover {
-    background-color: $accent-color;
-    border: 1px solid $accent-color;
+    background-color: $active-color;
+    border: 1px solid $active-color;
   }
 }
 
@@ -272,7 +272,7 @@ body {
   }
 
   &__title {
-    @include font($feature-title-color, 24px, 900, 28px);
+    @include font($title-color, 24px, 900, 28px);
     text-transform: uppercase;
     margin-bottom: 20.43px;
     @media only screen and (max-width: 1024px) {
@@ -283,7 +283,7 @@ body {
   }
 
   &__description {
-    @include font($feature-description-color, 18px, 400, 21px);
+    @include font($description-color, 18px, 400, 21px);
     @media only screen and (max-width: 1024px) {
       font-size: 14px;
       line-height: 16px;
@@ -375,6 +375,126 @@ body {
       margin-bottom: 0;
     }
   }
+}
+
+.social {
+  display: flex;
+  column-gap: 6px;
+  @media only screen and (max-width: 1024px) {
+    column-gap: 5.05px;
+  }
+  @media only screen and (max-width: 767px) {
+    column-gap: 6.09px;
+  }
+
+  &__wrapper-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 39px;
+    height: 39px;
+    @media only screen and (max-width: 1024px) {
+      width: 32.8px;
+      height: 32.8px;
+    }
+    @media only screen and (max-width: 767px) {
+      width: 39.6px;
+      height: 39.6px;
+    }
+  
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.team {
+  margin-bottom: 114px;
+  @media only screen and (max-width: 1024px) {
+    margin-bottom: 78.41px;
+  }
+  @media only screen and (max-width: 767px) {
+    margin-bottom: 34.39px;
+  }
+}
+
+.team__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 30px;
+  @media only screen and (max-width: 1024px) {
+    column-gap: 25px;
+  }
+  @media only screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    row-gap: 49.39px;
+  }
+}
+
+.member {
+    &__wrapper-image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+      width: 270px;
+      height: 270px;
+      margin-bottom: 30px;
+      @media only screen and (max-width: 1024px) {
+        margin-bottom: 25.23px;
+        width: 227px;
+        height: 227px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 25.25px;
+        width: 280px;
+        height: 227.254px;
+      }
+    }
+    &__image {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+    &__name {
+      @include font($title-color, 24px, 700, 28px);
+      margin-bottom: 5.29px;
+      @media only screen and (max-width: 1024px) {
+        margin-bottom: 4.6px;
+        font-size: 18px;
+        line-height: 21px;
+      }
+    }
+
+    &__position {
+      @include font($accent-color, 18px, 400, 21px);
+      margin-bottom: 17.86px;
+      text-transform: uppercase;
+      @media only screen and (max-width: 1024px) {
+        margin-bottom: 22.45px;
+        font-size: 14px;
+        line-height: 16px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 38.49px;
+      }
+    }
+
+    &__description {
+      @include font($description-color, 18px, 400, 21px);
+      margin-bottom: 37.86px;
+      @media only screen and (max-width: 1024px) {
+        margin-bottom: 39.2px;
+        font-size: 14px;
+        line-height: 16px;
+      }
+      @media only screen and (max-width: 767px) {
+        margin-bottom: 55.15px;
+      }
+    }
 }
 
 .download {
@@ -499,9 +619,8 @@ body {
     }
 
     &-container {
-      display: flex;
-      justify-content: center;
       column-gap: 27px;
+      justify-content: center;
       @media only screen and (max-width: 1024px) {
         column-gap: 23px;
       }
@@ -511,11 +630,6 @@ body {
     }
   
     &-wrapper-icon {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 39px;
-      height: 39px;
       @media only screen and (max-width: 1024px) {
         width: 33px;
         height: 33px;
