--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -109,6 +109,7 @@ body {
 
     &:hover {
       border-bottom: 3px solid $line-color;
+      transition: all .3s linear;
     }
   
     &:active {
@@ -215,6 +216,7 @@ body {
   &:hover {
     background-color: $active-color;
     border: 1px solid $active-color;
+    transition: all .1s linear;
   }
 }
 
@@ -344,6 +346,7 @@ body {
     &:hover {
       opacity: 1;
       background: $gradient-hover;
+      transition: all .3s linear;
     }
     &:active {
       opacity: 1;
@@ -405,6 +408,11 @@ body {
     svg {
       width: 100%;
       height: 100%;
+
+      &:hover path {
+        fill: $accent-color;
+        transition: all .3s linear;
+      }
     }
   }
 }
