--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -25,6 +25,9 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
+  &.scrolled {
+    background-color: $background-color;
+  }
   @media only screen and (max-width: 767px) {
     padding: 19px 0;
   }
@@ -57,6 +60,7 @@ body {
 
   &__logo {
     display: flex;
+    z-index: 2;
 
     & svg {
       width: 184px;
@@ -72,23 +76,115 @@ body {
   &__nav {
     @media only screen and (max-width: 767px) {
       display: none;
+      &.open {
+        display: flex;
+
+        .header__nav-list {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          position: fixed;
+          top: 0;
+          left: 0;
+          flex-direction: column;
+          z-index: 1;
+          background: url(/src/assets/media/banner.jpg);
+          background-size: cover;
+          background-position: center;
+          padding: 107px 20px;
+        }
+
+        .header__nav-list::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0.8;
+          background-color: $background-color;
+        }
+        .header__list-item {
+          margin-bottom: 49px;
+          flex-grow: 0;
+        }
+
+        .header__link {
+          text-align: left;
+          padding: 0;
+          line-height: 15px;
+          font-size: 13px;
+          border: none;
+        }
+      }
+    }
+    &-list {
+      display: flex;
+      @media only screen and (max-width: 767px) {
+        display: none;
+      }
     }
   }
 
   &__toggle-menu {
     display: none;
+    z-index: 2;
+    width: 24px;
+    height: 18px;
+    position: relative;
     @media only screen and (max-width: 767px) {
+      position: fixed;
+      right: 34.53px;
       display: flex;
       align-items: center;
     }
-  }
 
-  &__list {
-    display: flex;
-    @media only screen and (max-width: 767px) {
-      display: none;
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      border-bottom: 3px solid $main-font-color;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transition: all .3s linear;
+    }
+
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      border-bottom: 3px solid $main-font-color;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      transition: all .3s linear;
+    }
+
+    &.open {
+      .header__toogle-item {
+        width: 0;
+      }
+
+      &::after {
+        transform: rotate(-45deg) translate(5px, -5px);
+      }
+      &::before {
+        transform: rotate(45deg) translate(5.8px, 5.8px);
+      }
     }
   }
+
+  &__toogle-item {
+    border-bottom: 3px solid $main-font-color;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    transition: all .3s linear;
+  }
+  
 
   &__list-item {
     list-style: none;
@@ -233,7 +329,7 @@ body {
 .features__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 29px;
+  column-gap: 31px;
   row-gap: 89px;
   @media only screen and (max-width: 1024px) {
     column-gap: 20px;
@@ -255,7 +351,7 @@ body {
     justify-content: center;
     width: 100px;
     height: 100px;
-    margin-bottom: 29px;
+    margin-bottom: 51px;
     @media only screen and (max-width: 1024px) {
       margin-bottom: 24px;
       width: 85px;
@@ -274,9 +370,9 @@ body {
   }
 
   &__title {
-    @include font($title-color, 24px, 900, 28px);
+    @include font($title-color, 18px, 400, 21px);
     text-transform: uppercase;
-    margin-bottom: 20.43px;
+    margin-bottom: 43px;
     @media only screen and (max-width: 1024px) {
       margin-bottom: 3.95px;
       font-size: 18px;
