--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -75,17 +75,17 @@ body {
 
   &__nav {
     @media only screen and (max-width: 767px) {
-      display: none;
       &.open {
         display: flex;
-
+        top: 0;
+        left: 0;
         .header__nav-list {
           width: 100%;
           height: 100%;
           display: flex;
           position: fixed;
           top: 0;
-          left: 0;
+          right: 0;
           flex-direction: column;
           z-index: 1;
           background: url(/src/assets/media/banner.jpg);
@@ -121,7 +121,9 @@ body {
     &-list {
       display: flex;
       @media only screen and (max-width: 767px) {
-        display: none;
+        right: -100%;
+        position: absolute;
+        transition: right .3s linear;
       }
     }
   }
