--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -92,7 +92,6 @@ body {
           background-size: cover;
           background-position: center;
           padding: 107px 20px;
-          visibility: visible;
         }
 
         .header__nav-list::before {
@@ -122,10 +121,9 @@ body {
     &-list {
       display: flex;
       @media only screen and (max-width: 767px) {
-        visibility: hidden;
-        right: -500px;
+        top: -500px;
         position: absolute;
-        transition: right .3s linear;
+        transition: top 0.3s linear;
       }
     }
   }
