--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -751,6 +751,9 @@ body {
     }
   
     &-wrapper-icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       @media only screen and (max-width: 1024px) {
         width: 33px;
         height: 33px;
