--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -518,8 +518,8 @@ body {
     }
   
     svg {
-      width: 100%;
-      height: 100%;
+      max-width: 100%;
+      max-height: 100%;
       path {
         transition: all .3s linear;
       }
@@ -528,7 +528,7 @@ body {
 }
 
 .team {
-  margin-bottom: 782px;
+  margin-bottom: 114px;
   @media only screen and (max-width: 1024px) {
     margin-bottom: 78.41px;
   }
