--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -760,8 +760,8 @@ body {
       }
     
       svg {
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
       }
     }
   }
