--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -517,12 +517,8 @@ body {
       }
     }
   
-    svg {
-      max-width: 100%;
-      max-height: 100%;
-      path {
-        transition: all .3s linear;
-      }
+    svg path {
+      transition: all .3s linear;
     }
   }
 }
@@ -757,11 +753,6 @@ body {
       @media only screen and (max-width: 1024px) {
         width: 33px;
         height: 33px;
-      }
-    
-      svg {
-        max-width: 100%;
-        max-height: 100%;
       }
     }
   }
