--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -692,7 +692,7 @@ body {
       column-gap: 20px;
     }
     @media only screen and (max-width: 767px) {
-      grid-template-columns: repeat(1, 1fr);
+      display: block;
     }
   }
 
