--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -331,20 +331,20 @@ body {
   @media only screen and (max-width: 767px) {
     margin-bottom: 37px;
   }
-}
 
-.features__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 31px;
-  row-gap: 87px;
-  @media only screen and (max-width: 1024px) {
-    column-gap: 20px;
-    row-gap: 49px;
-  }
-  @media only screen and (max-width: 767px) {
-    grid-template-columns: repeat(1, 1fr);
-    row-gap: 43px;
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 31px;
+    row-gap: 87px;
+    @media only screen and (max-width: 1024px) {
+      column-gap: 20px;
+      row-gap: 49px;
+    }
+    @media only screen and (max-width: 767px) {
+      grid-template-columns: repeat(1, 1fr);
+      row-gap: 43px;
+    }
   }
 }
 
@@ -538,18 +538,18 @@ body {
   @media only screen and (max-width: 767px) {
     margin-bottom: 34.39px;
   }
-}
 
-.team__container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 30px;
-  @media only screen and (max-width: 1024px) {
-    column-gap: 25px;
-  }
-  @media only screen and (max-width: 767px) {
-    row-gap: 49px;
-    grid-template-columns: repeat(1, 1fr);
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 30px;
+    @media only screen and (max-width: 1024px) {
+      column-gap: 25px;
+    }
+    @media only screen and (max-width: 767px) {
+      row-gap: 49px;
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
 
@@ -617,14 +617,14 @@ body {
 }
 .testimonials {
   scroll-margin-top: 57px;
+  margin-bottom: 120px;
+  @media only screen and (max-width: 1024px) {
+    margin-bottom: 82px;
+  }
+  @media only screen and (max-width: 767px) {
+    margin-bottom: 41px;
+  }
   &__swiper {
-    margin-bottom: 120px;
-    @media only screen and (max-width: 1024px) {
-      margin-bottom: 82px;
-    }
-    @media only screen and (max-width: 767px) {
-      margin-bottom: 41px;
-    }
     &-wrapper {
       margin-bottom: 57px;
       @media only screen and (max-width: 1024px) {
@@ -655,11 +655,9 @@ body {
     object-position: center;
     width: 100%;
     height: 100%;
-    position: absolute;
     top: 0;
     left: 0;
     @media only screen and (max-width: 767px) {
-      position: relative;
       aspect-ratio: 4 / 2.65;
     }
   }
@@ -668,6 +666,9 @@ body {
     padding: 134px 170px 122px 114px;
     @media only screen and (max-width: 1024px) {
       padding: 62px 133px 112px 78px;
+    }
+    @media only screen and (max-width: 850px) {
+      padding: 62px;
     }
     @media only screen and (max-width: 767px) {
       padding: 24px 25px 100px 20px;
@@ -719,8 +720,6 @@ body {
     background: $testimonials-background-color;
   }
 }
-
-
 
 .swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet {
   margin: 0 12.5px;
