--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -14,4 +14,5 @@ $download-color: #000000;
 $border-cions-color:#C6CBCD;
 $testimonials-background-color: #5C3249;
 $testimonials-btn-color: #7E5D6F;
+$testimonials-light-color: #7e5d6f83;
 
